[package]
name = "joint_rs"
version = "0.1.0"
authors = ["Jonathan Kelley <jkelleyrtp@gmail.com>"]
edition = "2018"

[dependencies]
yew = "0.7.0"
euclid = "0.19.9"
undo = "0.35"
petgraph = "0.4.13"




# serde = ""
# serde-derive = ""
# petgraph-0.4.13

# [dev-dependencies]
# wasm-bindgen-test = "0.2.47"


